--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
+    needs: build
+    
     strategy:
       matrix:
         node-version: [12.x, 14.x]
@@ -36,6 +38,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/download-artifact@master
+      with:
+        name: webpack artifacts
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
